# ShoppingLikeFiles-NativeComponent

./: .gitignore  CMakeLists.txt  README.md  runSonar.ps1  sonar-project.properties
.ci/: set-version.sh
.github/workflows/: build.yml  release.yml
afl/: CMakeLists.txt  TestHarness.cpp  get_test_files.sh  run_afl.sh
afl/error_cases/: 10.caff  11.caff  6.caff  7.caff  8.caff  9.caff
afl/error_cases/Run1/: crash_10.caff  crash_11.caff  crash_12.caff  crash_13.caff  crash_14.caff  crash_15.caff  crash_16.caff  crash_17.caff  crash_18.caff  crash_19.caff  crash_2.caff  crash_20.caff  crash_21.caff  crash_3.caff  crash_4.caff  crash_5.caff  crash_6.caff  crash_7.caff  crash_8.caff  crash_9.caff  hang_1.caff  hang_2.caff
afl/error_cases/Run2/: crash_1.caff  crash_2.caff  crash_3.caff  crash_4.caff  crash_5.caff
afl/error_cases/Run3/: crash_4.caff  crash_5.caff
afl/error_cases/Run4/: crash_1.caff  crash_3.caff  crash_4.caff
docs/: Build.md  README.md
include/: BasicBlock.h  CAFF_Processor.h  CAFF_validation.h  CIFF_Processor.h  CIFF_Utils.h  CIFF_validation.h  DLLPublicInterface.h  Utils.h
klee/: README.md  build_klee.sh  klee_creditHarness.cpp  klee_harness.cc  run_klee.sh
src/: BasicBlock.cc  CAFF_Processor.cc  CAFF_validation.cc  CIFF_Processor.cc  CIFF_Utils.cc  CIFF_validation.cc  DLLPublicInterface.cc  Util.cc  calculator.cc  calculator.h  library.h  main.cc
test/: CAFF_Processor_Test.cc  CAFF_validation_Test.cc  CIFF_Processor_Test.cc  CIFF_Utils_unittest.cc  CIFF_Validation_Test.cc  CIFF_unittest.cc  CMakeLists.txt  Utils_unittest.cc  calculator_unittest.cc  hello_test.cpp
test/include/: Helpers.h
